Link refactor